37001 Add method to augment entity data in service Added new optional service method augmentEntity